--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-RewriteEngine On 
-RewriteCond %{HTTPS} !on 
-RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$ 
-RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$ 
+RewriteEngine On
+RewriteCond %{HTTPS} !on
+RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
+RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteCond %{REQUEST_URI} !^/[0-9]+\..+\.cpaneldcv$
 RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
@@ -16,6 +16,6 @@ RewriteRule ^ %{REQUEST_URI}.html [NC,L]
 ErrorDocument 404 /404.html
 
 # One month for most static assets
-<filesMatch ".(css|jpg|jpeg|png|gif|js|ico)$">
+<filesMatch ".(css|jpg|jpeg|png|gif|ico)$">
 Header set Cache-Control "max-age=2628000, public"
 </filesMatch>
